# amicus_auxilium

./: .env  .gitignore  Cargo.toml  Dockerfile  Procfile  postgresql.conf  shell.nix
client/: .gitignore  elm.json  index.css  index.html  index.js  package.json
client/src/: .gitignore  Main.elm
migrations/: V1__create_messages_table.sql
src/: main.rs
