[package]
name = "amicus_auxilium"
version = "0.1.0"
authors = ["3goliad <3goliad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
warp = "0.2"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.1"
hyper = "*"
tower-service = "*"
tracing-log = "0.1"
tokio-postgres = "0.5"
dotenv = "0.15.0"
[dependencies.refinery]
version = "0.2.1"
features = ["tokio-postgres"]
# [dependencies.refinery-migrations]
# version = "0.2.2"
# features = ["async"]
[dependencies.sqlx]
version = "0.2"
default-features = false
features = ["runtime-tokio", "postgres"]
[dependencies.tokio]
version = "0.2"
features = ["full"]
[dependencies.openssl]
version = "*"
